# testbot

./: LICENSE  README.md  testbot_install.sh
testbot/: CMakeLists.txt  package.xml
testbot_bringup/: CMakeLists.txt  package.xml
testbot_bringup/config/: cam2image_params.yaml
testbot_bringup/launch/: testbot.launch.py
testbot_setup/: CMakeLists.txt  package.xml
testbot_setup/scripts/: testbot_setup.sh
