<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testbot</name>
  <version>0.0.0</version>
  <description>Testbot metapackage</description>
  <maintainer email="eric.dortmans@gmail.com">eric</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>testbot_setup</exec_depend>
  <exec_depend>testbot_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
