<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testbot_bringup</name>
  <version>0.0.1</version>
  <description>Testbot bringup</description>
  <maintainer email="eric.dortmans@gmail.com">eric</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!--<exec_depend>some_other_package</exec_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
