<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testbot_setup</name>
  <version>0.0.1</version>
  <description>Testbot setup</description>
  <maintainer email="eric.dortmans@gmail.com">eric</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>rmw_cyclonedds_cpp</exec_depend>
  <exec_depend>rmw_fastrtps_cpp</exec_depend>
  <exec_depend>testbot_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
